# wtf-rdp

./: .ghtraf.json  .repokit.json  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  TODO.md  generate-backlinks.py  pyproject.toml  sync-versions.py  update-version.sh
.github/: CODEOWNERS  FUNDING.yml  release-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  release.yml  setup-from-template.yml  traffic-badges.yml
demo/: build_demo.py
docs/: extending.md  platform-support.md
docs/stats/: README.md  index.html
hooks/: post-commit  pre-commit  pre-push
scripts/: CHANGELOG.md  gh_issue_full.py  install-hooks.sh  paths.sh  update-common.sh
scripts/demo/: demo_render.py
scripts/docs/: sync-versions.md
tests/: conftest.py  test_cli.py  test_version.py
tests/checklists/: v0.2.0__Feature__sessfix-basic-model.md  v0.3.0__Feature__sessfix-query-logs-config-and-help.md
tests/one-offs/: analyze-png.ps1  test-ac1-verify-verdict.Tests.ps1  test-arbitration-verdict.Tests.ps1  test-blockscreen-verdict.Tests.ps1
wtf_rdp/: __init__.py  __main__.py  _version.py  cli.py
wtf_rdp/assets/: Invoke-RdpConnect.ps1  Watch-RdpSession.ps1
wtf_rdp/kits/: sessfix.kit.json
wtf_rdp/lib/: WtfRdp.Sessions.psm1  __init__.py
wtf_rdp/tools/sessfix/config/: .wtf-rdp.json  config.ps1
wtf_rdp/tools/sessfix/install/: .wtf-rdp.json  install.ps1
wtf_rdp/tools/sessfix/logs/: .wtf-rdp.json  logs.ps1
wtf_rdp/tools/sessfix/query/: .wtf-rdp.json  query.ps1
wtf_rdp/tools/sessfix/recover/: .wtf-rdp.json  recover.ps1
wtf_rdp/tools/sessfix/status/: .wtf-rdp.json  status.ps1
wtf_rdp/tools/sessfix/test/: .wtf-rdp.json  test.ps1
wtf_rdp/tools/sessfix/uninstall/: .wtf-rdp.json  uninstall.ps1
