[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wtf-rdp"
dynamic = ["version"]
description = "A new project created from git-repokit-template"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "djdarcy", email = "djdarcy@users.noreply.github.com"},
]
keywords = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/DazzleTools/wtf-rdp"
Repository = "https://github.com/DazzleTools/wtf-rdp"
Issues = "https://github.com/DazzleTools/wtf-rdp/issues"

[project.scripts]
wtf-rdp = "wtf_rdp.cli:main"

[tool.setuptools.dynamic]
version = {attr = "wtf_rdp._version.PIP_VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["wtf_rdp", "wtf_rdp.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.repokit-common]
version-source = "wtf_rdp/_version.py"
changelog = "CHANGELOG.md"
repo-url = "https://github.com/DazzleTools/wtf-rdp"
tag-prefix = "v"
private-patterns = ["private/", "local/", ".env"]
