[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wtf-rdp"
dynamic = ["version"]
description = "Windows RDP session-rescue tooling: a wtf-windows-family CLI (rdp) built on dazzlecmd-lib that detects and non-destructively recovers RDP sessions wedged/blocked by Local Session Manager."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Dustin Darcy", email = "djdarcy@users.noreply.github.com"},
]
keywords = [
    "rdp",
    "windows",
    "remote-desktop",
    "local-session-manager",
    "tscon",
    "session-recovery",
    "watchdog",
    "sysadmin",
    "incident-response",
    "nssm",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

dependencies = [
    "dazzlecmd-lib>=0.8,<1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/djdarcy/wtf-rdp"
Repository = "https://github.com/djdarcy/wtf-rdp"
Issues = "https://github.com/djdarcy/wtf-rdp/issues"

# `rdp` is the short, discoverable command; `wtf-rdp` is kept as an explicit alias.
[project.scripts]
rdp = "wtf_rdp.cli:main"
wtf-rdp = "wtf_rdp.cli:main"

[tool.setuptools.dynamic]
version = {attr = "wtf_rdp._version.PIP_VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["wtf_rdp", "wtf_rdp.*"]

# Bundle the PowerShell scripts, kit definitions, and tool manifests as package
# data. NSSM is NOT bundled (a third-party binary doesn't belong in a PyPI wheel);
# `rdp setup sessfix` downloads a checksum-verified nssm.exe at install time.
[tool.setuptools.package-data]
wtf_rdp = [
    "kits/*.json",
    "tools/**/*",
    # The per-tool manifests are named `.wtf-rdp.json` (leading dot). setuptools'
    # `*` glob skips dotfiles, so `tools/**/*` above silently drops them and the
    # installed CLI finds no tools -- list them explicitly so the wheel includes them.
    "tools/**/.wtf-rdp.json",
    "assets/*.ps1",
    "lib/*.psm1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.repokit-common]
version-source = "wtf_rdp/_version.py"
changelog = "CHANGELOG.md"
repo-url = "https://github.com/djdarcy/wtf-rdp"
tag-prefix = "v"
private-patterns = ["private/", "local/", ".env"]
